--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -64,7 +64,7 @@ a {
     grid-auto-flow: column;
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     
-    margin: 0 auto;
+    margin: 0 22px 0 22px;
     gap: 22px;
 }
 
@@ -130,7 +130,7 @@ svg {
     }
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 750px){
     body {
         height: 100vh;
         overflow-y: hidden;
