--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,8 +55,11 @@ h1 {
 }
 
 a { 
-
+    border-radius: 9px;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #cards {
@@ -68,45 +71,76 @@ a {
     gap: 22px;
 }
 
-a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .card {
     border-radius: 9px;
-    border: 2px solid rgba(92, 92, 96, 0.50);;
-
-    background: rgba(41, 41, 47, 0.1);
-    justify-content: center;
+    background: rgba(255, 255, 255, 0.1);
     display: flex;
-    flex-direction: column;
     height: 320px;
-    /* min-width: calc(100% - 60px); */
-    /* width: calc(100% - 60px); */
     width: 100%;
     cursor: pointer;
+    position: relative;
+    z-index: 2;
 }
 
-.card:hover{
-    /* background-image: linear-gradient(to bottom, ); */
-    border: 2px solid rgba(92, 92, 96, 0.95);
-    background: rgba(41, 41, 47, 0.75);
+.card > .card-content{
+    min-width: 10vw;
+    /* width: 100vw; */
+    border-radius: 9px;
+    /* box-sizing: border-box; */
+    background-color: #252529;
+    flex-grow: 1;
+    inset: 1px;
+    margin: 1px;
+    z-index: 1;
+    /* position: absolute; */
+    /* inset: 1px; */
+    /* display: flex; */
+    /* flex-direction: column; */
 }
+
+#cards:hover > a > .card::before {
+    opacity: 1;
+}
+
+
+.card:hover::after{
+    opacity: 1;
+}
+
+.card::before, .card::after {
+    border-radius: 8px;
+    content: "";
+    bottom: 0px;
+    left: 0px;
+    position: absolute;
+    opacity: 0;
+    width:100%;
+    height: 100%;
+
+    transition: opacity 500ms;
+}
+.card::before {
+    background: radial-gradient(200px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.30) 0%, rgba(217, 217, 217, 0.00) 100%);
+    z-index: 0;
+}
+
+.card::after {
+    background: radial-gradient(400px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.04) 0%, rgba(217, 217, 217, 0.00) 100%);
+    z-index: 2;
+}
+
 
 .card-image {
+    /* opacity: 0.50; */
     height: 70%;
     width: auto;
     display: flex;
     align-items : center;
     overflow: hidden;
-    border: #FFF;
+    /* border: #FFF; */
 }
 
-.card-content{
-    height: 100%;
-    padding: 24px 12px 24px 12px;
-}
+
 
 img, svg {
     max-width:75%;
@@ -142,16 +176,19 @@ svg {
         gap: 16px;
     }
     .card {
-        height: 10vh;
-        width: 300px;
+        height: 15vh;
+        width: 340px;
         flex-direction: row;
-        padding: 16px;
+        padding: 1px;
         justify-content: left;
         /* padding-bottom:5px; */
     }
 
     .card-content {
         display: flex;
+        /* flex-grow: 1; */
+        flex-shrink: 0;
+        margin: 16px;
         padding: 0px;
     }
 
